calendar made uniform text changes bug fixed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -229,8 +229,8 @@
   "EditListingDescriptionForm.serviceDescription": "Service description",
   "EditListingDescriptionForm.serviceDescriptionPlaceholder": "Write a short description about the service",
   "EditListingDescriptionForm.descriptionRequired": "A description is required.",
-  "EditListingDescriptionForm.oralDisclaimer": "Disclaimer",
-  "EditListingDescriptionForm.oralDisclaimerPlaceholder": "Write a disclaimer about this consultation",
+  "EditListingDescriptionForm.oralDisclaimer": "Disclaimer (Optional)",
+  "EditListingDescriptionForm.oralDisclaimerPlaceholder": "If you stipulate a disclaimer your client will be required to accept it upon checkout.",
   "EditListingDescriptionForm.serviceDisclaimer": "Disclaimer",
   "EditListingDescriptionForm.serviceDisclaimerPlaceholder": "Write a short disclaimer about the service",
   "EditListingDescriptionForm.disclaimerRequired": "A disclaimer is required",
@@ -1200,7 +1200,7 @@
   "ProfileSettingsForm.startDateLabel": "Date",
   "ProfileSettingsForm.startTimePlaceholder": "00:00",
   "ProfileSettingsForm.practiceDateRequired": "Choose Date",
-  "ProfileSettingsForm.practiceDateLabel": "Date",
+  "ProfileSettingsForm.practiceDateLabel": "Date acquired",
   "ProfileSettingsForm.countryRequired": "Choose country",
   "ProfileSettingsForm.statusPlaceholder": "Select status",
   "ProfileSettingsForm.statusLabel": "Status",
@@ -1244,10 +1244,10 @@
   "Topbar.createListing": "+ Create consultation",
   "UserNav.yourListings": "Manage Your Listings",
   "UserNav.sales": "My Sales",
-  "UserNav.myAppointments": "My Appointments",
+  "UserNav.myAppointments": "My Orders",
   "TopbarDesktop.manageListingsLink": "Manage Your Listings",
   "TopbarMobile.manageListingsLink": "Manage Your Listings",
-  "TopbarDesktop.appointmentsLink": "My Appointments",
+  "TopbarDesktop.appointmentsLink": "My Orders",
   "EditListingWizard.tabLabelAreaOfLaw": "Area of Law",
   "EditListingWizard.tabLabelDuration": "Duration",
   "EditListingWizard.tabLabelClient": "Client ID",
@@ -1288,21 +1288,22 @@
   "EditListingDeadlinePanel.title": "Deadline",
   "EditListingWizard.saveEditDeadline": "Save Deadline",
   "EditListingWizard.saveNewDeadline": "Next: Expiry",
-  "CreateListing.heading": "Choose your consultation / service type",
+  "CreateListing.heading": "Create and sell consultations and services either publicly or privately or both",
   "CreateListing.subHeading": "Select one of the following type of consultation/service",
-  "CreateListing.oralInfo": "This consultation will be visible to all registered users",
-  "CreateListing.customInfo": "For creating custom tailor-made consultation only visible to specific client",
-  "CreateListing.serviceInfo": "For creating custom tailor-made service only visible to specific client",
+  "CreateListing.oralInfo": "The public consultation is available for purchase by any registered user.",
+  "CreateListing.customInfo": "The tailor-made consultation is available for purchase only by a specific registered user (or multiple users) that you choose.",
+  "CreateListing.serviceInfo": "The tailor-made service is specific work available for purchase only by a specific registered user that you choose.",
   "ProfileSettingsForm.descriptionLabel": "Description",
   "SignupForm.clientTypeRequired": "This field is required",
   "SignupForm.clientTypePlaceholder": "Choose account type",
   "SignupForm.clientTypeLabel": "Register as",
   "ProfileSettingsForm.descriptionPlaceholder": "Descriptopn",
+  "ProfileSettingsForm.practiceDatePlaceholder": "Date",
   "UserResultCard.ListingProfileLink": "Book Now",
   "ContactDetailsForm.otpRequired": "This field is required",
   "ProfileSettingsForm.stateLabel": "State",
-  "ProfileSettingsForm.postalCodeLabel": "Postal Code",
-  "ProfileSettingsForm.postalCodePlaceholder": "Postal code",
+  "ProfileSettingsForm.postalCodeLabel": "ZIP Code",
+  "ProfileSettingsForm.postalCodePlaceholder": "ZIP code",
   "ProfileSettingsForm.postalCodeRequiredMessage": "This field is required",
   "ProfileSettingsForm.cityLabel": "City",
   "EditListingClientIdForm.addMoreClient": "+ Add More Client Id",
@@ -1346,7 +1347,7 @@
   "MyAppointmentPage.upcomingTabTitle": "Upcoming",
   "MyAppointmentPage.completeTabTitle": "Complete",
   "MyAppointmentPage.verificationTabTitle": "Verification",
-  "TopbarMobileMenu.myAppointment": "My appointments",
+  "TopbarMobileMenu.myAppointment": "My Orders",
   "FieldDateAndTimeInputService.startDateLabel": "Start Date",
   "InboxPage.stateRescheduled": "Rescheduled",
   "ActivityFeed.transitionRescheduleCustomer": "Rescheduled",
@@ -1366,5 +1367,12 @@
   "ProfileSettingsForm.afterBufferTimeLabel": "After Time",
   "ProfileSettingsForm.afterBufferTimePlaceholder": "After",
   "ProfileSettingsForm.beforeBufferTimePlaceHolder": "Before",
-  "ProfileSettingsForm.bufferTimeTitle": "Choose Buffer Time"
+  "ProfileSettingsForm.bufferTimeTitle": "Choose Buffer Time",
+  "CreateListing.publicOral": "Create Public Consultation",
+  "CreateListing.customOral": "Create Tailor-Made Consultation",
+  "CreateListing.customService": "Create Tailor-Made Service",
+  "ProfileSettingsForm.fromPlaceholder": "Start Date",
+  "ProfileSettingsForm.toPlaceholder": "End Date",
+  "EditListingDeadlineForm.deadlinePlaceholder": "Deadline Date",
+  "EditListingExpiryForm.expiryPlaceholder": "Expiry Date"
 }
