topbar rearranged search page puliclisting removed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1074,7 +1074,8 @@
   "TopbarDesktop.login": "Log In",
   "TopbarDesktop.logo": "Yogatime",
   "TopbarDesktop.logout": "Log Out",
-  "TopbarDesktop.mysalesLink": "My Sales",
+  "TopbarDesktop.mySalesLink": "My Sales",
+  "TopbarMobile.mySalesLink": "My Sales",
   "TopbarDesktop.profileSettingsLink": "User Profile",
   "TopbarDesktop.signup": "Join as a Client",
   "TopbarDesktop.signupLawyer": "Join as a Lawyer",
@@ -1203,7 +1204,7 @@
   "ProfileSettingsForm.practiceDateLabel": "Date acquired",
   "ProfileSettingsForm.countryRequired": "Choose country",
   "ProfileSettingsForm.statusPlaceholder": "Select status",
-  "ProfileSettingsForm.statusLabel": "Status",
+  "ProfileSettingsForm.statusLabel": "License Status",
   "ProfileSettingsForm.statusRequired": "Choose status",
   "ProfileSettingsForm.jurisdictionPracticeTitle": "Jurisdiction where certified to practice",
   "ProfileSettingsForm.languagePlaceholder": "Select language",
@@ -1278,8 +1279,8 @@
   "EditListingWizard.customOralSaveNewClient": "Next: Pricing",
   "EditListingWizard.saveEditClient": "Save Client ID",
   "EditListingWizard.saveNewClient": "Next: Pricing",
-  "EditListingPricingForm.vatLabel": "VAT percentage (%)",
-  "EditListingPriceForm.vattype": "Vat type",
+  "EditListingPricingForm.vatLabel": "VAT percentage (%) (Optional)",
+  "EditListingPriceForm.vattype": "Vat type (Optional)",
   "EditListingClientIdForm.subTitle": "This will make this consultation only visible for following client ID",
   "EditListingWizard.saveNewCustomServicePricing": "Next: Deadline",
   "EditListingWizard.saveNewCustomOralPricing": "Next: Expiry",
