search city bug fixed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1308,10 +1308,10 @@
   "ProfileSettingsForm.postalCodeRequiredMessage": "This field is required",
   "ProfileSettingsForm.cityLabel": "City",
   "EditListingClientIdForm.addMoreClient": "+ Add More Client Id",
-  "PromotionPage.title": "Private Page",
-  "TopbarDesktop.promotionLink": "Private",
-  "TopbarMobile.promotionLink": "Private",
-  "UserNav.PromotionPage": "Private",
+  "PromotionPage.title": "Private offers Page",
+  "TopbarDesktop.promotionLink": "Private offers",
+  "TopbarMobile.promotionLink": "Private offers",
+  "UserNav.PromotionPage": "Private offers",
   "ServicesPage.title": "Service Page",
   "UserNav.ServicesPage": "Services for Me",
   "TopbarDesktop.ServicesLink": "Services",
