listing creation title changed for all 3 types

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -244,7 +244,7 @@
   "EditListingDescriptionForm.updateFailed": "Failed to update. Please try again.",
   "EditListingDescriptionPanel.createListingTitle": "Create teacher profile",
   "EditListingDescriptionPanel.listingTitle": "your teacher profile",
-  "EditListingDescriptionPanel.title": "Edit {listingTitle}",
+  "EditListingDescriptionPanel.title": "You are editing the public consultation Employment Contract {listingTitle}",
   "EditListingFeaturesForm.showListingFailed": "Fetching teacher profile data failed",
   "EditListingFeaturesForm.updateFailed": "Failed to update profile. Please try again.",
   "EditListingFeaturesPanel.createListingTitle": "What yoga styles do you teach?",
@@ -477,7 +477,7 @@
   "ManageListingPage.practiceAreaFilterElementLabel": "Practice Area",
   "ManageListingCard.actionFailed": "Whoops, something went wrong. Please refresh the page and try again.",
   "ManageListingCard.closeListing": "Close consultation",
-  "ManageListingCard.closedListing": "This consultation is closed and not visible on the marketplace.",
+  "ManageListingCard.closedListing": "This consultation is closed and not visible on the marketplace. {listingTitle}",
   "ManageListingCard.draftOverlayText": "{listingTitle} is a draft and can't be booked.",
   "ManageListingCard.editListing": "Edit",
   "ManageListingCard.finishListingDraft": "Finish",
@@ -522,7 +522,7 @@
   "NotFoundPage.description": "We can't find the page or teacher profile you're looking for. Make sure you've typed in the URL correctly or try searching Yogatime.",
   "NotFoundPage.heading": "Sorry, we couldn't find that page.",
   "NotFoundPage.title": "Page not found",
-  "OwnListingLink.addYourListingLink": "Create consultation",
+  "OwnListingLink.addYourListingLink": "+ Create",
   "OwnListingLink.editYourListingLink": "Edit teacher profile",
   "Page.schemaDescription": "Find Legal Advice Online. Find experienced lawyers you need. Anytime. Anywhere.",
   "Page.schemaTitle": "Book private yoga lessons everywhere | {siteTitle}",
@@ -1067,7 +1067,7 @@
   "Topbar.mobileSearchHelp": "Tip: You can also search teachers by zip code, for example \"10012\" or city district - \"Manhattan\".",
   "Topbar.searchIcon": "Open search",
   "TopbarDesktop.accountSettingsLink": "Account Settings",
-  "TopbarDesktop.createListing": "+ Create Consultation",
+  "TopbarDesktop.createListing": "+ Create",
   "TopbarDesktop.addYourListingLink": "Become a teacher",
   "TopbarDesktop.editYourListingLink": "Edit teacher profile",
   "TopbarDesktop.inbox": "Inbox",
@@ -1151,7 +1151,7 @@
   "UserCard.viewProfileLink": "View user profile",
   "UserDisplayName.banned": "Banned user",
   "UserDisplayName.deleted": "Deleted user",
-  "UserNav.newListing": "Create Consultation/Service",
+  "UserNav.newListing": "+ Create",
   "UserNav.editListing": "Edit teacher profile",
   "UserNav.profileSettingsPage": "Edit User Profile",
   "UserNav.contactDetailsPage": "Account Settings",
@@ -1242,7 +1242,7 @@
   "ProfilePage.professionalDetail": "Professional details",
   "ProfilePage.workExp": "Work Experience",
   "ProfilePage.education": "Education",
-  "Topbar.createListing": "+ Create consultation",
+  "Topbar.createListing": "+ Create",
   "UserNav.yourListings": "Manage Your Listings",
   "UserNav.sales": "My Sales",
   "UserNav.myAppointments": "My Orders",
@@ -1253,9 +1253,27 @@
   "EditListingWizard.tabLabelDuration": "Duration",
   "EditListingWizard.tabLabelClient": "Client ID",
   "EditListingWizard.tabLabelDeadline": "Deadline",
-  "EditListingDescriptionPanel.publicOralTitle": "Oral Consultation Description",
-  "EditListingDescriptionPanel.customOralTitle": "Custom Tailored Oral Consultation Description",
-  "EditListingDescriptionPanel.customServiceTitle": "Custom Tailored Service Description",
+  "EditListingDescriptionPanel.publicOralTitle": "You are creating the public consultation Employment Contract",
+  "EditListingDescriptionPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
+  "EditListingDescriptionPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract",
+  "EditListingDescriptionPanel.customServiceTitle": "You are creating the tailor-made service Employment Contract",
+  "EditListingDescriptionPanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
+  "EditListingClientIdPanel.customServiceTitle": "You are creating the tailor-made service Employment Contract {listingTitle}",
+  "EditListingClientIdPanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
+  "EditListingClientIdPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract {listingTitle}",
+  "EditListingClientIdPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
+  "EditListingDurationPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
+  "EditListingDurationPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract {listingTitle}",
+  "EditListingDeadlinePanel.customServiceTitle": "You are creating the tailor-made service Employment Contract {listingTitle}",
+  "EditListingDeadlinePanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
+  "EditListingDurationPanel.publicOralTitle": "You are creating the public consultation Employment Contract {listingTitle}",
+  "EditListingDurationPanel.publicOralTitleEdit": "You are editing the public consultation Employment Contract {listingTitle}",
+  "EditListingExpiryPanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
+  "EditListingExpiryPanel.customServiceTitle": "You are creating the tailor-made service Employment Contract {listingTitle}",
+  "EditListingExpiryPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract {listingTitle}",
+  "EditListingExpiryPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
+  "EditListingAreaOfLawPanel.publicOralTitle": "You are creating the public consultation Employment Contract {listingTitle}",
+  "EditListingAreaOfLawPanel.publicOralTitleEdit": "You are editing the public consultation Employment Contract {listingTitle}",
   "EditListingWizard.saveNewPublicOralDescription": "Next: Area of Law",
   "EditListingAreaOfLawPanel.listingTitle": "Area of Law",
   "EditListingAreaOfLawPanel.title": "Edit {listingTitle}",
