updated listing creation and global availablity

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -293,10 +293,12 @@
   "EditListingPricingForm.priceTooLow": "Price should be at least {minPrice}.",
   "EditListingPricingForm.showListingFailed": "Fetching listing data failed",
   "EditListingPricingForm.updateFailed": "Failed to update listing. Please try again.",
-  "EditListingPricingPanel.createListingTitle": "Pricing",
+  "EditListingPricingPanel.createListingTitle": "Fee",
+  "EditListingDurationPricingPanel.createListingTitle":"Duration & Fee",
   "EditListingPricingPanel.listingPriceCurrencyInvalid": "Currency in teacher profile is different from the marketplace currency. You cannot edit the price.",
   "EditListingPricingPanel.listingTitle": "your sessions",
-  "EditListingPricingPanel.title": "Pricing",
+  "EditListingPricingPanel.title": "Fee",
+  "EditListingDuraionPricingPanel.title":"Duration & Fee",
   "EditListingPricingForm.vatinvalid": "Enter valid Vat Number",
   "EditListingClientIdPanel.title": "Client Id",
   "EditListingWizard.payoutModalInfo": "Almost done! In order to send you money, we need to know a bit more about you. Next, we will guide you through verifying your account. The details can also be edited from Account Setting page on Payout details tab. ",
@@ -309,11 +311,12 @@
   "EditListingWizard.saveEditAvailability": "Save availability",
   "EditListingWizard.saveEditPhotos": "Save photos",
   "EditListingWizard.saveEditPolicies": "Save policies",
-  "EditListingWizard.saveEditPricing": "Save pricing",
+  "EditListingWizard.saveEditPricing": "Save fee",
+  "EditListingWizard.saveEditDuraionPricing":"Save duration & fee",
   "EditListingWizard.saveNewDescription": "Next: Client ID",
   "EditListingWizard.saveNewFeatures": "Next: Location",
-  "EditListingWizard.saveNewLocation": "Next: Pricing",
-  "EditListingWizard.saveNewAvailability": "Next: Pricing",
+  "EditListingWizard.saveNewLocation": "Next: {pricingTitle}",
+  "EditListingWizard.saveNewAvailability": "Next: {pricingTitle}",
   "EditListingWizard.saveNewPhotos": "Publish consultation",
   "EditListingWizard.saveNewPolicies": "Next: Location",
   "EditListingWizard.saveNewPricing": "Publish",
@@ -323,7 +326,7 @@
   "EditListingWizard.tabLabelLocation": "Location",
   "EditListingWizard.tabLabelPhotos": "Photos",
   "EditListingWizard.tabLabelPolicy": "Policies",
-  "EditListingWizard.tabLabelPricing": "Pricing",
+  "EditListingWizard.tabLabelPricing": "Fee",
   "EmailVerificationForm.finishAccountSetup": "We will need to send you email notifications. To allow this, please verify your email address {email}.",
   "EmailVerificationForm.successButtonText": "Continue exploring",
   "EmailVerificationForm.successText": "Everything looks good. Time to get out there - have a great day.",
@@ -1250,6 +1253,7 @@
   "TopbarMobile.manageListingsLink": "Manage Your Listings",
   "TopbarDesktop.appointmentsLink": "My Orders",
   "EditListingWizard.tabLabelAreaOfLaw": "Area of Law",
+  "EditListingWizard.tabLabelDurationPricing": "Duration & Fee",
   "EditListingWizard.tabLabelDuration": "Duration",
   "EditListingWizard.tabLabelClient": "Client ID",
   "EditListingWizard.tabLabelDeadline": "Deadline",
@@ -1258,22 +1262,30 @@
   "EditListingDescriptionPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract",
   "EditListingDescriptionPanel.customServiceTitle": "You are creating the tailor-made service Employment Contract",
   "EditListingDescriptionPanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
-  "EditListingClientIdPanel.customServiceTitle": "You are creating the tailor-made service Employment Contract {listingTitle}",
+  "EditListingClientIdPanel.customServiceTitle": "You are creating the tailor-made service Employment Contract",
   "EditListingClientIdPanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
-  "EditListingClientIdPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract {listingTitle}",
+  "EditListingClientIdPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract",
   "EditListingClientIdPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
   "EditListingDurationPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
   "EditListingDurationPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract {listingTitle}",
-  "EditListingDeadlinePanel.customServiceTitle": "You are creating the tailor-made service Employment Contract {listingTitle}",
+  "EditListingDeadlinePanel.customServiceTitle": "You are creating the tailor-made service Employment Contract",
   "EditListingDeadlinePanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
   "EditListingDurationPanel.publicOralTitle": "You are creating the public consultation Employment Contract {listingTitle}",
   "EditListingDurationPanel.publicOralTitleEdit": "You are editing the public consultation Employment Contract {listingTitle}",
   "EditListingExpiryPanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
-  "EditListingExpiryPanel.customServiceTitle": "You are creating the tailor-made service Employment Contract {listingTitle}",
-  "EditListingExpiryPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract {listingTitle}",
+  "EditListingExpiryPanel.customServiceTitle": "You are creating the tailor-made service Employment",
+  "EditListingExpiryPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract",
   "EditListingExpiryPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
-  "EditListingAreaOfLawPanel.publicOralTitle": "You are creating the public consultation Employment Contract {listingTitle}",
+  "EditListingAreaOfLawPanel.publicOralTitle": "You are creating the public consultation Employment Contract",
   "EditListingAreaOfLawPanel.publicOralTitleEdit": "You are editing the public consultation Employment Contract {listingTitle}",
+
+  "EditListingPricePanel.publicOralTitle": "You are creating the public consultation Employment Contract",
+  "EditListingPricePanel.publicOralTitleEdit": "You are editing the public consultation Employment Contract {listingTitle}",
+  "EditListingPricePanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
+  "EditListingPricePanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract",
+  "EditListingPricePanel.customServiceTitle": "You are creating the tailor-made service Employment Contract",
+  "EditListingPricePanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
+
   "EditListingWizard.saveNewPublicOralDescription": "Next: Area of Law",
   "EditListingAreaOfLawPanel.listingTitle": "Area of Law",
   "EditListingAreaOfLawPanel.title": "Edit {listingTitle}",
@@ -1294,9 +1306,9 @@
   "EditListingClientIdForm.clientIdLabel": "Enter Client ID",
   "EditListingClientIdForm.clientIdPlaceholder": "Type client ID",
   "EditListingClientIdForm.clientIdRequired": "Client ID required",
-  "EditListingWizard.customOralSaveNewClient": "Next: Pricing",
+  "EditListingWizard.customOralSaveNewClient": "Next: Duration & Fee",
   "EditListingWizard.saveEditClient": "Save Client ID",
-  "EditListingWizard.saveNewClient": "Next: Pricing",
+  "EditListingWizard.saveNewClient": "Next: Fee",
   "EditListingPricingForm.vatLabel": "VAT percentage (%) (Optional)",
   "EditListingPriceForm.vattype": "Vat type (Optional)",
   "EditListingClientIdForm.subTitle": "This will make this consultation only visible for following client ID",
