for service lawyer confirmation done

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -8,6 +8,8 @@
   "ActivityFeed.ownTransitionExpire": "Booking request expired. You did not reply on time.",
   "ActivityFeed.ownTransitionRequest": "You have booked { listingTitle }.",
   "ActivityFeed.ownTransitionReview": "You left a review for { displayName }.",
+  "ActivityFeed.ownTransitionServiceDelivered": "You delivered the service.",
+  "ActivityFeed.transitionServiceDelivered": "{ displayName } delivered the service.",
   "ActivityFeed.showOlderMessages": "Show older",
   "ActivityFeed.today": "Today",
   "ActivityFeed.transitionAccept": "{ displayName } accepted the booking request.",
@@ -294,11 +296,11 @@
   "EditListingPricingForm.showListingFailed": "Fetching listing data failed",
   "EditListingPricingForm.updateFailed": "Failed to update listing. Please try again.",
   "EditListingPricingPanel.createListingTitle": "Fee",
-  "EditListingDurationPricingPanel.createListingTitle":"Duration & Fee",
+  "EditListingDurationPricingPanel.createListingTitle": "Duration & Fee",
   "EditListingPricingPanel.listingPriceCurrencyInvalid": "Currency in teacher profile is different from the marketplace currency. You cannot edit the price.",
   "EditListingPricingPanel.listingTitle": "your sessions",
   "EditListingPricingPanel.title": "Fee",
-  "EditListingDuraionPricingPanel.title":"Duration & Fee",
+  "EditListingDuraionPricingPanel.title": "Duration & Fee",
   "EditListingPricingForm.vatinvalid": "Enter valid Vat Number",
   "EditListingClientIdPanel.title": "Client Id",
   "EditListingWizard.payoutModalInfo": "Almost done! In order to send you money, we need to know a bit more about you. Next, we will guide you through verifying your account. The details can also be edited from Account Setting page on Payout details tab. ",
@@ -312,7 +314,7 @@
   "EditListingWizard.saveEditPhotos": "Save photos",
   "EditListingWizard.saveEditPolicies": "Save policies",
   "EditListingWizard.saveEditPricing": "Save fee",
-  "EditListingWizard.saveEditDuraionPricing":"Save duration & fee",
+  "EditListingWizard.saveEditDuraionPricing": "Save duration & fee",
   "EditListingWizard.saveNewDescription": "Next: Client ID",
   "EditListingWizard.saveNewFeatures": "Next: Location",
   "EditListingWizard.saveNewLocation": "Next: {pricingTitle}",
@@ -1148,6 +1150,9 @@
   "TransactionPanel.savePaymentMethodFailed": "Saving default payment method failed. Go to {paymentMethodsPageLink} to try again.",
   "TransactionPanel.sendingMessageNotAllowed": "This user has been removed. Sending message to the user is not possible anymore.",
   "TransactionPanel.sendMessagePlaceholder": "Send a message to {name}…",
+  "TransactionPanel.pendingConfimationTitle": "Waiting for {customerName} to confirm",
+  "TransactionPanel.pendingConfirmationTitle": "{providerName} has delivered  {listingLink}.",
+  "TransactionPanel.pendingConfirmationSubtitle": "Waiting for your confirmation",
   "UserCard.contactUser": "Contact",
   "UserCard.heading": "Hello, I'm {name}.",
   "UserCard.showFullBioLink": "more",
