client mail send done along with some other bugs

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1296,7 +1296,7 @@
   "EditListingAreaOfLawPanel.title": "Edit {listingTitle}",
   "EditListingAreaOfLawForm.title": "Select appropriate area(s) of law for this topic",
   "EditlistingAreaOfLawForm.addMore": "+ Add More",
-  "EditListingWizard.saveNewAreaOfLaw": "Next: Duration",
+  "EditListingWizard.saveNewAreaOfLaw": "Next: Duration & Fee",
   "EditListingWizard.saveEditAreaOfLaw": "Save Area Of Law",
   "EditListingWizard.saveNewDuration": "Next: Client-ID",
   "EditListingWizard.saveEditDuration": " Save Duration",
@@ -1306,7 +1306,7 @@
   "EditListingDurationForm.durationInvalid": "Invalid duration",
   "EditListingDurationForm.durationPlaceholder": "Enter duration",
   "EditListingPriceForm.pricingLabel": "Price in USD",
-  "EditListingWizard.saveNewcustomOralDescription": "Next: Duration",
+  "EditListingWizard.saveNewcustomOralDescription": "Next: Client ID",
   "EditListingClientIdPanel.listingTitle": "Client",
   "EditListingClientIdForm.clientIdLabel": "Enter Client ID",
   "EditListingClientIdForm.clientIdPlaceholder": "Type client ID",
