--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -246,7 +246,7 @@
   "EditListingDescriptionForm.updateFailed": "Failed to update. Please try again.",
   "EditListingDescriptionPanel.createListingTitle": "Create teacher profile",
   "EditListingDescriptionPanel.listingTitle": "your teacher profile",
-  "EditListingDescriptionPanel.title": "You are editing the public consultation Employment Contract {listingTitle}",
+  "EditListingDescriptionPanel.title": "You are editing the public consultation {listingTitle}",
   "EditListingFeaturesForm.showListingFailed": "Fetching teacher profile data failed",
   "EditListingFeaturesForm.updateFailed": "Failed to update profile. Please try again.",
   "EditListingFeaturesPanel.createListingTitle": "What yoga styles do you teach?",
@@ -1262,34 +1262,34 @@
   "EditListingWizard.tabLabelDuration": "Duration",
   "EditListingWizard.tabLabelClient": "Client ID",
   "EditListingWizard.tabLabelDeadline": "Deadline",
-  "EditListingDescriptionPanel.publicOralTitle": "You are creating the public consultation Employment Contract",
-  "EditListingDescriptionPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
-  "EditListingDescriptionPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract",
-  "EditListingDescriptionPanel.customServiceTitle": "You are creating the tailor-made service Employment Contract",
-  "EditListingDescriptionPanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
-  "EditListingClientIdPanel.customServiceTitle": "You are creating the tailor-made service Employment Contract",
-  "EditListingClientIdPanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
-  "EditListingClientIdPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract",
-  "EditListingClientIdPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
-  "EditListingDurationPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
-  "EditListingDurationPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract {listingTitle}",
-  "EditListingDeadlinePanel.customServiceTitle": "You are creating the tailor-made service Employment Contract",
-  "EditListingDeadlinePanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
-  "EditListingDurationPanel.publicOralTitle": "You are creating the public consultation Employment Contract {listingTitle}",
-  "EditListingDurationPanel.publicOralTitleEdit": "You are editing the public consultation Employment Contract {listingTitle}",
-  "EditListingExpiryPanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
+  "EditListingDescriptionPanel.publicOralTitle": "You are creating the public consultation  ",
+  "EditListingDescriptionPanel.customOralTitleEdit": "You are editing the tailor-made consultation ",
+  "EditListingDescriptionPanel.customOralTitle": "You are creating the tailor-made consultation  ",
+  "EditListingDescriptionPanel.customServiceTitle": "You are creating the tailor-made service {listingTitle}",
+  "EditListingDescriptionPanel.customServiceTitleEdit": "You are editing the tailor-made service {listingTitle}",
+  "EditListingClientIdPanel.customServiceTitle": "You are creating the tailor-made service {listingTitle}",
+  "EditListingClientIdPanel.customServiceTitleEdit": "You are editing the tailor-made service {listingTitle}",
+  "EditListingClientIdPanel.customOralTitle": "You are creating the tailor-made consultation {listingTitle}",
+  "EditListingClientIdPanel.customOralTitleEdit": "You are editing the tailor-made consultation {listingTitle}",
+  "EditListingDurationPanel.customOralTitleEdit": "You are editing the tailor-made consultation {listingTitle}",
+  "EditListingDurationPanel.customOralTitle": "You are creating the tailor-made consultation {listingTitle}",
+  "EditListingDeadlinePanel.customServiceTitle": "You are creating the tailor-made service {listingTitle}",
+  "EditListingDeadlinePanel.customServiceTitleEdit": "You are editing the tailor-made service {listingTitle}",
+  "EditListingDurationPanel.publicOralTitle": "You are creating the public consultation {listingTitle}",
+  "EditListingDurationPanel.publicOralTitleEdit": "You are editing the public consultation {listingTitle}",
+  "EditListingExpiryPanel.customServiceTitleEdit": "You are editing the tailor-made service {listingTitle}",
   "EditListingExpiryPanel.customServiceTitle": "You are creating the tailor-made service Employment",
-  "EditListingExpiryPanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract",
-  "EditListingExpiryPanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
-  "EditListingAreaOfLawPanel.publicOralTitle": "You are creating the public consultation Employment Contract",
-  "EditListingAreaOfLawPanel.publicOralTitleEdit": "You are editing the public consultation Employment Contract {listingTitle}",
+  "EditListingExpiryPanel.customOralTitle": "You are creating the tailor-made consultation {listingTitle}",
+  "EditListingExpiryPanel.customOralTitleEdit": "You are editing the tailor-made consultation {listingTitle}",
+  "EditListingAreaOfLawPanel.publicOralTitle": "You are creating the public consultation {listingTitle}",
+  "EditListingAreaOfLawPanel.publicOralTitleEdit": "You are editing the public consultation {listingTitle}",
 
-  "EditListingPricePanel.publicOralTitle": "You are creating the public consultation Employment Contract",
-  "EditListingPricePanel.publicOralTitleEdit": "You are editing the public consultation Employment Contract {listingTitle}",
-  "EditListingPricePanel.customOralTitleEdit": "You are editing the tailor-made consultation Employment Contract {listingTitle}",
-  "EditListingPricePanel.customOralTitle": "You are creating the tailor-made consultation Employment Contract",
-  "EditListingPricePanel.customServiceTitle": "You are creating the tailor-made service Employment Contract",
-  "EditListingPricePanel.customServiceTitleEdit": "You are editing the tailor-made service Employment Contract {listingTitle}",
+  "EditListingPricePanel.publicOralTitle": "You are creating the public consultation {listingTitle}",
+  "EditListingPricePanel.publicOralTitleEdit": "You are editing the public consultation {listingTitle}",
+  "EditListingPricePanel.customOralTitleEdit": "You are editing the tailor-made consultation {listingTitle}",
+  "EditListingPricePanel.customOralTitle": "You are creating the tailor-made consultation {listingTitle}",
+  "EditListingPricePanel.customServiceTitle": "You are creating the tailor-made service {listingTitle}",
+  "EditListingPricePanel.customServiceTitleEdit": "You are editing the tailor-made service {listingTitle}",
 
   "EditListingWizard.saveNewPublicOralDescription": "Next: Area of Law",
   "EditListingAreaOfLawPanel.listingTitle": "Area of Law",
