reset password link otp done

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1172,6 +1172,8 @@
   "signupFormForm.otpPlaceholder": "1111",
   "SignupForm.otpRequired": "Otp is required to signup",
   "SignupForm.otpErrMsg": "Invalid OTP",
+  "PasswordResetForm.otpErrMsg": "Invalid OTP",
+  "PasswordChangeForm.otpErrMsg": "Invalid OTP",
   "ProfileSettingPage.cNamePlaceHolder": "Enter company name",
   "SignupForm.codeRequired": "Country code required",
   "ProfileSettingsForm.companyDetail": "Company details",
@@ -1337,6 +1339,8 @@
   "ProfileSettingsForm.practiceDatePlaceholder": "Date",
   "UserResultCard.ListingProfileLink": "Book Now",
   "ContactDetailsForm.otpRequired": "This field is required",
+  "PasswordChangeForm.otpRequired": "This field is required",
+  "PasswordResetForm.otpRequired": "This field is required",
   "ProfileSettingsForm.stateLabel": "State",
   "ProfileSettingsForm.postalCodeLabel": "ZIP Code",
   "ProfileSettingsForm.postalCodePlaceholder": "ZIP code",
