otp err message bug fixed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1265,9 +1265,9 @@
   "EditListingWizard.tabLabelClient": "Client ID",
   "EditListingWizard.tabLabelDeadline": "Deadline",
   "EditListingDescriptionPanel.publicOralTitle": "You are creating the public consultation  ",
-  "EditListingDescriptionPanel.customOralTitleEdit": "You are editing the tailor-made consultation ",
+  "EditListingDescriptionPanel.customOralTitleEdit": "You are editing the tailor-made consultation {listingTitle}",
   "EditListingDescriptionPanel.customOralTitle": "You are creating the tailor-made consultation  ",
-  "EditListingDescriptionPanel.customServiceTitle": "You are creating the tailor-made service {listingTitle}",
+  "EditListingDescriptionPanel.customServiceTitle": "You are creating the tailor-made service ",
   "EditListingDescriptionPanel.customServiceTitleEdit": "You are editing the tailor-made service {listingTitle}",
   "EditListingClientIdPanel.customServiceTitle": "You are creating the tailor-made service {listingTitle}",
   "EditListingClientIdPanel.customServiceTitleEdit": "You are editing the tailor-made service {listingTitle}",
